examples/fail/semantic/method_call_on_non_struct.bina
// EXPECT_SEMANTIC_ERROR: method call requires struct type
fn main() -> int {
    let x = 1;
    x.value();
    return 0;
}
